--- a/app/views/backend/projects/show.html.erb
+++ b/app/views/backend/projects/show.html.erb
@@ -27,15 +27,21 @@
 	<div class="element_field">
 	  <div class="name">State</div><div class="content"><%= @project.state %></div>
 	</div>
+	<% unless @project.project_img.blank? %>
 	<div class="element_field">
 	  <div class="name">Project image</div><%= image_tag @project.project_img.url(:small), :class => "content image" %>
 	</div>
+	<% end %>
+	<% unless @project.construction_img.blank? %>
 	<div class="element_field">
 	  <div class="name">Construction image</div><%= image_tag @project.construction_img.url(:small), :class => "content image" %>
 	</div>
+	<% end %>
+	<% unless @project.result_img.blank? %>
 	<div class="element_field">
 	  <div class="name">Result image</div><%= image_tag @project.result_img.url(:small), :class => "content image" %>
 	</div>
+	<% end %>
 	
 	<div class="controls">
 		<%= link_to 'Edit', edit_admin_project_path(@project), :class => "action" %>
