backend/index (admin/index) added

--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -16,7 +16,7 @@
 					<%= render @current_cart %>
 				<% end %>
 			<% end %>
-			<div id="logo"><a href=""></a></div>
+			<div id="logo"><%= link_to '', '/admin' %></div>
     </div>
   </div>
   
