redirections to /admin in account controller fixed

--- a/app/views/backend/account/sign_in.html.erb
+++ b/app/views/backend/account/sign_in.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <% if notice then %>
-<div id="warning" class="element">
+<div id="notice" class="element">
 	<%= notice %>
 </div>
 <% end %>
