--- a/app/views/backend/index/index.html.erb
+++ b/app/views/backend/index/index.html.erb
@@ -1,1 +1,7 @@
+<% if notice then %>
+<div id="notice">
+	<%= notice %>
+</div>
+<% end %>
+
 <div id="welcome">Welcome to the Charta administrator panel</div>
