frontend/projects controller added

--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -22,7 +22,7 @@
   
   <div id="menu">
     <div class="container">
-      <a href="">company</a><a href="">staff</a><a href="">projets</a>
+      <a href="">company</a><a href="">projets</a>
     </div>
   </div>
 
