frontend styles changed (lighter background and rounded bottom corners in menu buttons)

--- a/app/assets/stylesheets/frontend/frontend.css.scss
+++ b/app/assets/stylesheets/frontend/frontend.css.scss
@@ -39,7 +39,7 @@ a:hover
 body
 {
 	position: relative;
-	background-color: #111111;
+	background-color: #222222;
 	background-image: url('../noise.png');
 	color: #cccccc;
 }
@@ -113,6 +113,7 @@ body
 	margin: 0;
 	padding: 6px 10px;
 	border-top: solid 2px #bbbbbb;
+	border-radius: 0 0 10px 10px;
 	//background-image: url('../noise.png');
 	text-decoration: none;
 	font-size: 25px;
@@ -122,7 +123,7 @@ body
 #menu a:hover
 {
 	border-top: solid 2px #333333;
-	background-color: #000000;
+	background-color: #111111;
 	background-image: url('../noise.png');
 }
 
