frontend/projects styles changed

--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -22,7 +22,7 @@
   
   <div id="menu">
     <div class="container">
-      <a href="">company</a><a href="">projets</a>
+      <%= link_to 'company', company_path %><%= link_to 'projets', projects_path %>
     </div>
   </div>
 
